--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.4",
+    "react-quill": "^2.0.0",
     "react-select": "^5.8.0",
     "react-to-pdf": "^1.0.1",
     "tailwind-merge": "^2.3.0",
